# llama-vision-wrapper

./: .gitignore  2025-09-17-status.md  AGENTS.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  README.md  USAGE_GUIDE.md  battle_arena.py  battle_runner_cli.py  battle_sim.py  battle_types.py  benchmark_results.json  benchmark_results_rk3588_kleinai_2025_10.json  bot-runner-python.py  bot_runner_python.py  build_backend.py  buildguide.md  ccpyy-mtmd.py  compare-profiler-output.py  cython-mtmd.py  example_llm_gen_control_code.py  generation_helper.cpp  generation_helper.h  graphics-2d-simple.py  graphics-3d-panda.py  graphics-3d-pygfx.py  graphics.py  graphics3d.py  graphicsgodot3d.py  llama_mtmd_wrapper.cpp  llama_mtmd_wrapper.pyx  llm_bot_controller.py  manual-setup.py  patch_llama_common_for_dynamic.patch  plan-updated.md  plan.md  pyproject.toml  python_battle_42.json  python_llm.py  (+11 more)
.claude/agents/: design-reviewer.md
OLD/: dsl_examples.py  dsl_grammar.tx  plan-early.md
OLD-IGNORE/: viewer_3d_panda.py  viewer_3d_pygfx.py
build-tools/: build_backend.py  stage_headers.py
cpppy/: ccpyy-mtmd.py  ccpyy-mtmd.py.back
cppyy-src/: README.md  ccpyy-mtmd.py  cppyy-mtmd.py  llama_core.py  llama_cpp_wrapper.py  utils.py
cppyy-src/examples/: image-encoder.py  simple-generation.py
cython/: cython-mtmd.py  llama_mtmd_wrapper.cpp  llama_mtmd_wrapper.pyx  setup.py
cython-src/: cython-mtmd.py  llama_mtmd_wrapper.cpp  llama_mtmd_wrapper.pyx  setup.py
gen-helper/: CMakeLists.txt  generation_helper.cpp
godot-specific/: godot_battle_viewer_gd  godot_battle_viewer_tscn  godot_project_template
godot_project/: project.godot
godot_project/scenes/: BattleViewer.tscn
godot_project/scripts/: ArenaManager.gd  ArenaManager.gd.uid  BattleData.gd  BattleViewer3D.gd  BattleViewer3D.gd.uid  BotFactory.gd  BotFactory.gd.uid  CameraController.gd  CameraController.gd.uid  HealthBarComponent.gd  HealthBarComponent.gd.uid  LightingManager.gd  LightingManager.gd.uid  MaterialManager.gd  MaterialManager.gd.uid  UIManager.gd  UIManager.gd.uid
helper-scripts/: compare-profiler-output.py
llama.cpp/common/: CMakeLists.txt
old/: OLD_README.md  benchmark_results_rk3588_kleinai_2025_10_v2.json  camera.py
old/cppyy-src/: llama_cpp_wrapper.py
old/cppyy-src/examples/: image-encoder.py  simple-generation.py
old/cython-src/: cython-mtmd.py  cython-setup.py
old/cython-version/: cython-mtmd.py  cython-setup.py  llama_mtmd_cython_wrapper.cpp  setup.py
private/: Qwen3-2B-4B-scan-rk3588-2025-11.md  benchmarking.md
src/gen-helper/: CMakeLists.txt  generation_helper.h
src/llama_insight/: __init__.py
tests/: test_llm_prompt_mock_vs_remote.py  test_python_battle_smoke.py  test_python_function_runner_integration.py  test_visibility_rays_determinism.py
usecases/: README.md  _shared.py  batched-generation.py  benchmark_camera_inference.py  cppyy-mtmd.py  encode_images.py  generate_batched.py  generate_benchmark.py  generate_from_camera.py  generate_simple.py  image-encoder.py  infer_from_encoded.py
usecases/examples/: batched-generation.py  image-encoder.py  simple-generation.py
wrapper_src/gen-helper/: CMakeLists.txt  generation_helper.cpp  generation_helper.h
wrapper_src/llama_insight/: __init__.py  config.py  core.py  usecase_helpers.py
wrapper_src/llama_insight/_headers/: generation_helper.h
