[project]
name = "llm-agent-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "pymunk>=7.1.0",
    "snakeviz>=2.2.2",
    "textx>=4.2.2",
    "typer>=0.19.2",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "ursina>=8.1.1",
    "panda3d-simplepbr>=0.13.1",
    "panda3d-gltf>=1.3.0",
    "panda3d-complexpbr>=0.6.0",
    "pygfx>=0.13.0",
    "glfw>=2.10.0",
    "pytest>=8.4.2",
    "RestrictedPython>=8.0",
    "wasmer>=1.1.0",
    "wasmer-compiler-cranelift>=1.1.0",
]
