[build-system]
requires = [
    "uv_build>=0.9.8,<0.10.0",
    "scikit-build-core>=0.11",
    "cmake>=3.26",
    "ninja>=1.11",
]
build-backend = "build_backend"
backend-path = ["build-tools"]

[project]
name = "llama_insight"
version = "0.1.0"
description = "High-level llama.cpp multimodal bindings powered by cppyy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cppyy",
    "huggingface-hub",
    "typer",
    "sh",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
]

[tool.scikit-build]
# Direct scikit-build-core to find the package inside wrapper_src
packages = ["src/llama_insight"]

[tool.uv-build]
module-root = "src"
source-include = [
    "build-tools/**",
    "src/gen-helper/**",
    "patch_llama_common_for_dynamic.patch",
    "src/llama_insight/_headers/**",
]
source-exclude = [
    "/build/**",
    "/dist/**",
    "/test-images/**",
    "/usecases/**",
    "/old/**",
]
#
# Build config examples (pass via `uv build --config-setting`):
#   llama-insight.backend=<cpu|cuda|metal|vulkan|hip|kleidiai|custom>
#   llama-insight.extra-flags="-DGGML_BLAS=ON -DGGML_BLAS_VENDOR=OpenBLAS"
#   llama-insight.skip-native-build=true
#   llama-insight.dry-run=true
